@@ -167,6 +167,8 @@ COM_PODCASTMANAGER_SHOW_FEED_IMAGE_DESCRIPTION="If defined, show the feed image 
 COM_PODCASTMANAGER_SHOW_FEED_IMAGE_LABEL="Show Feed Image"
 COM_PODCASTMANAGER_SHOW_FEED_TITLE_DESCRIPTION="Show the feed title as a heading on the page."
 COM_PODCASTMANAGER_SHOW_FEED_TITLE_LABEL="Show Feed Title"
+COM_PODCASTMANAGER_SHOW_ITEM_AUTHOR_DESCRIPTION="Choose whether to show the author of the podcast in the grid."
+COM_PODCASTMANAGER_SHOW_ITEM_AUTHOR_LABEL="Show Podcast Author"
 COM_PODCASTMANAGER_SHOW_ITEM_DESCRIPTION_DESCRIPTION="If defined, show the podcast episode description with each listing."
 COM_PODCASTMANAGER_SHOW_ITEM_DESCRIPTION_LABEL="Show Podcast Description"
 COM_PODCASTMANAGER_SHOW_ITEM_PLAYER_DESCRIPTION="If set to yes, then display the media player for each listed episode.  The Podcast Manager Content Plugin must be enabled for this player to render."
