@@ -4,6 +4,7 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMANAGER="Podcast Manager"
+COM_PODCASTMANAGER_AUTHOR_FILTER_LABEL="Author Filter"
 COM_PODCASTMANAGER_DATE_FILTER_LABEL="Date Filter"
 COM_PODCASTMANAGER_DEFAULT_PAGE_TITLE="Podcast Feed"
 COM_PODCASTMANAGER_ERROR_FINDING_FILE="Could not locate the file %s on the file system, skipping feed item"
